# forge

./: .gitignore  README.md  ansible.cfg  docker.yml  first_configuration.yml  production  pyproject.toml  secret.yml
ansible/: .gitignore  README.md  ansible.cfg  ca_init.yml  dnsmasq.yml  gemini.md  haproxy.yml  machikiflix.yml  pki.yml  pyproject.toml
ansible/inventories/: inventory.proxmox.yaml  inventory_lxc.proxmox.yaml  inventory_qemu.proxmox.yaml
ansible/inventories/group_vars/all/: proxmox.yaml
ansible/roles/common/tasks/: main.yml
ansible/roles/dnsmasq/files/: dnsmasq.conf
ansible/roles/dnsmasq/handlers/: main.yml
ansible/roles/dnsmasq/tasks/: main.yml
ansible/roles/docker/tasks/: main.yml
ansible/roles/haproxy/files/: cert-renewer@.service
ansible/roles/haproxy/tasks/: create_certificate.yml  main.yml
ansible/roles/haproxy/templates/: cert-renewer@.service.j2  haproxy.cfg.j2  step-ca-renewal.service.j2
ansible/roles/haproxy/vars/: main.yml  vault.yml
ansible/roles/machikiflix/files/: docker-compose-traefik.yml
ansible/roles/machikiflix/handlers/: main.yml
ansible/roles/machikiflix/tasks/: machikiflix_deploy.yml  main.yml  media_server_deploy.yml  servarr_deploy.yml  torrent_deploy.yml  traefik_deploy.yml
ansible/roles/machikiflix/templates/: docker-compose-media-server.yml.j2  docker-compose-servarr.yml.j2  docker-compose-torrent.yml.j2  media-server.service.j2  servarr.service.j2  torrent.service.j2  traefik.service.j2  update-certs.sh.j2
ansible/roles/machikiflix/vars/: main.yml  vault.yml
ansible/roles/pki/tasks/: main.yml
(+22 files in other folders)
