[project]
name = "forge-ansible"
version = "0.1.0"
description = ""
authors = [
    {name = "jacquot-pierre",email = "p.jacquotfr@gmail.com"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible (>=11.6.0,<12.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "proxmoxer (>=2.2.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
