[project]
name = "forge"
version = "0.1.0"
description = ""
authors = [
    {name = "jacquot-pierre",email = "p.jacquotfr@gmail.com"}
]

readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible (>=11.6.0,<12.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "proxmoxer (>=2.2.0,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
